--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
 <body>
     <nav class="menu">
         <div class="menu-top">
-            Matts
+            <img src="" alt="">
+            <h4>Matts</h4>
+            <span class="span">Web Developer</span>
         </div>
         <div class="menu-center">
-            <a>Home</a>
-            <a>Skills</a>
-            <a>Works</a>
-            <a>Contanct</a>
+            <a class="a-menu">Home</a>
+            <a class="a-menu">Skills</a>
+            <a class="a-menu">Works</a>
+            <a class="a-menu">Contanct</a>
         </div>
         <div class="menu-bottom">
-            Matts@corporation
+            <a href="#"><img src="/svg/github.png" alt="1"></img></a>
+            <a href="#"><img src="/svg/twitter.png" alt="2"></img></a>
+            <a href="#"><img src="/svg/discord.png" alt="3"></img></a>
         </div>
     </nav>
 
@@ -34,6 +38,49 @@
             <h1>Hi,</h1>
             <h1>I'm Matts,</h1>
             <h1>web developer</h1>
+            <span class="span2">Front End Developer</span>
+            </div>
+        </div>
+        <div class="seccion">
+            <div class="seccion Skills" >
+            <h2>Skills</h2>
+                <div class="tecnologys">
+                    <img class="svg" src="/svg/html-1.svg" width="200" height="200"></img>
+                    <img class="svg" src="/svg/css-3.svg" width="200" height="200"></img>
+                    <img class="svg" src="/svg/bootstrap-5-1.svg" width="200" height="200"></img>
+                    <img class="svg" src="/svg/logo-javascript.svg" width="200" height="200"></img>
+                    <img class="svg" src="/svg/jquery-1.svg" width="200" height="200"></img>
+                    <img class="svg" src="/svg/php-1.svg" width="200" height="200"></img>
+                    <img class="svg" src="/svg/angular-icon-1.svg" width="200" height="200"></img>
+                </div>
+            </div>
+        </div>
+        <div class="seccion">
+            <div class="seccion works" >
+                <h2>Works</h2>
+                <div class="work">
+                <a href="https://control-de-gastos-matts.netlify.app/"><img class="work-img" src="/assets/calcu.jpg" alt="calcu" ></a>
+                <a href="https://blocdenotasmatts.netlify.app/"><img class="work-img" src="/assets/nota.jpg" alt="nota"></a>
+                <a href="https://blocdenotasmatts.netlify.app/"><img class="work-img" src="/assets/nota.jpg" alt="nota"></a>
+                <a href="https://blocdenotasmatts.netlify.app/"><img class="work-img" src="/assets/nota.jpg" alt="nota"></a>
+                <a href="https://blocdenotasmatts.netlify.app/"><img class="work-img" src="/assets/nota.jpg" alt="nota"></a>
+                </div>
+            </div>
+        </div>
+        <div class="seccion">
+            <div class="seccion Contanct" >
+            <h2>Contanct</h2>
+                <div class="Contanct1">
+                    <form>
+                        <input type="text" placeholder="Name">
+                        <input type="email" placeholder="Email">
+                        <textarea placeholder="Message" overflow-x="hidden"></textarea>
+                        <button type="submit">Send Message</button>
+                    </form>
+                    <div>
+                        <h3>hola</h3>
+                    </div>
+                </div>
             </div>
         </div>
         
