--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="seccion">
             <div class="seccion Skills" >
-            <h2>Skills</h2>
+            <h2>technologies</h2>
                 <div class="tecnologys">
                     <img class="svg" src="/svg/html-1.svg" width="200" height="200"></img>
                     <img class="svg" src="/svg/css-3.svg" width="200" height="200"></img>
@@ -52,6 +52,7 @@
                     <img class="svg" src="/svg/jquery-1.svg" width="200" height="200"></img>
                     <img class="svg" src="/svg/php-1.svg" width="200" height="200"></img>
                     <img class="svg" src="/svg/angular-icon-1.svg" width="200" height="200"></img>
+                    <img class="svg" src="/svg/mongodb-icon-1.svg" width="200" height="200"></img>
                 </div>
             </div>
         </div>
