--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="menu">
         <div class="menu-top">
-            <img src="" alt="">
+            <img class="perfil" src="/assets/cubo.gif" alt="k" width="150" height="150">
             <h4>Matts</h4>
             <span class="span">Web Developer</span>
         </div>
@@ -26,7 +26,7 @@
             <a class="a-menu">Contanct</a>
         </div>
         <div class="menu-bottom">
-            <a href="#"><img src="/svg/github.png" alt="1"></img></a>
+            <a href="https://github.com/Matts001"><img src="/svg/github.png" alt="1"></img></a>
             <a href="#"><img src="/svg/twitter.png" alt="2"></img></a>
             <a href="#"><img src="/svg/discord.png" alt="3"></img></a>
         </div>
@@ -62,9 +62,9 @@
                 <div class="work">
                 <a href="https://control-de-gastos-matts.netlify.app/"><img class="work-img" src="/assets/calcu.jpg" alt="calcu" ></a>
                 <a href="https://blocdenotasmatts.netlify.app/"><img class="work-img" src="/assets/nota.jpg" alt="nota"></a>
+                <a href="https://banco-img-matts.netlify.app/"><img class="work-img" src="/assets/images.png" alt="nota"></a>
                 <a href="https://blocdenotasmatts.netlify.app/"><img class="work-img" src="/assets/nota.jpg" alt="nota"></a>
-                <a href="https://blocdenotasmatts.netlify.app/"><img class="work-img" src="/assets/nota.jpg" alt="nota"></a>
-                <a href="https://blocdenotasmatts.netlify.app/"><img class="work-img" src="/assets/nota.jpg" alt="nota"></a>
+                <a href="https://pagkanna.herokuapp.com/"><img class="work-img" src="/assets/P0tmi57.jpeg" alt="bot"></a>
                 </div>
             </div>
         </div>
@@ -73,6 +73,7 @@
             <h2>Contanct</h2>
                 <div class="Contanct1">
                     <form>
+                        <h3>Contanct Me</h3>
                         <input type="text" placeholder="Name">
                         <input type="email" placeholder="Email">
                         <textarea placeholder="Message" overflow-x="hidden"></textarea>
