--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <span class="span">Web Developer</span>
         </div>
         <div class="menu-center">
-            <a class="a-menu">Home</a>
-            <a class="a-menu">Skills</a>
-            <a class="a-menu">Works</a>
-            <a class="a-menu">Contanct</a>
+            <a class="a-menu" href="#Home">Home</a>
+            <a class="a-menu" href="#Skills">Skills</a>
+            <a class="a-menu" href="#Works">Works</a>
+            <a class="a-menu" href="#Contanct">Contanct</a>
         </div>
         <div class="menu-bottom">
             <a href="https://github.com/Matts001"><img src="/svg/github.png" alt="1"></img></a>
@@ -33,7 +33,7 @@
     </nav>
 
     <section class="page">
-        <div class="seccion">
+        <div class="seccion" id="Home">
             <div class="seccion home" >
             <h1>Hi,</h1>
             <h1>I'm Matts,</h1>
@@ -41,7 +41,7 @@
             <span class="span2">Front End Developer</span>
             </div>
         </div>
-        <div class="seccion">
+        <div class="seccion" id="Skills">
             <div class="seccion Skills" >
             <h2>technologies</h2>
                 <div class="tecnologys">
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <div class="seccion">
+        <div class="seccion" id="Works">
             <div class="seccion works" >
                 <h2>Works</h2>
                 <div class="work">
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </div>
-        <div class="seccion">
+        <div class="seccion" id="Contanct">
             <div class="seccion Contanct" >
             <h2>Contanct</h2>
                 <div class="Contanct1">
