--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="seccion home" >
             <h1>Hi,</h1>
             <h1>I'm Matts,</h1>
-            <h1>web developer</h1>
+            <h1 class="writing"></h1>
             <span class="span2">Front End Developer</span>
             </div>
         </div>
